# cloneit

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: archiver.rs  arg_parser.rs  args.rs  cli.yaml  directory.rs  emojis.rs  file_archiver.rs  lib.rs  main.rs  output.rs  parser.rs  requests.rs
src/utils/: mod.rs  parser.rs  requests.rs
