[package]
name = "cloneit"
version = "1.0.0"
edition = "2018"
authors = ["Alok <alok8bb@gmail.com>"]
description = "A commandline tool to download specific GitHub directories or files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary for a "smaller" size.
lto = true

[dependencies]
clap = { version = "3" }
url = "2.2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde =  { version = "1.0.127", features = ["derive"]}
async-recursion = "0.3.2"
colored = "2"
indicatif = "0.16.2"
zip = "0.6" # for file-zipping related things
walkdir = "2"
crossterm = "0.24.0"
base64 = "0.13.0"