[package]
name = "cloneit"
version = "1.0.0"
edition = "2018"
authors = ["Alok <alok8bb@gmail.com>"]
description = "A commandline tool to download specific GitHub directories or files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary for a "smaller" size.
lto = true

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
url = "2.2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde =  { version = "1.0.127", features = ["derive"]}
async-recursion = "1.0.0"
zip = "0.6" # for file-zipping related things
walkdir = "2"
proc-macro2 = "1.0.46"
kdam = "0.2.3"
